# holidata

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  DCO  INSTALL  LICENSE  NEWS  README  README.md  cmake.h.in  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  locale-request.md
.github/workflows/: codeql-analysis.yml  python-eol-check.yml  pythonpackage.yml
doc/: CMakeLists.txt
doc/man/: .gitignore  holidata.1.in
docs/how-tos/: add-country.md  add-locales.md  add-regions.md  define-holidays.md  getting-started.md
holidata/: emitters.py  plugin.py
holidata/holidays/: __init__.py  cs-CZ.py  da-DK.py  de-AT.py  de-CH.py  de-DE.py  el-GR.py  en-AU.py  en-CA.py  en-GB.py  en-US.py  es-CO.py  es-ES.py  es-US.py  et-EE.py  fi-FI.py  fr-CA.py  fr-FR.py  holidays.py  hr-HR.py  hu-HU.py  nl-NL.py  pl-PL.py  pt-BR.py  pt-PT.py  sk-SK.py  sl-SI.py  sv-SE.py
python/: README  countries.py  emitters.py  holidata.py  plugin.py  utils.py
python/holidays/: __init__.py  da-DK.py  de-AT.py  de-BE.py  de-CH.py  de-DE.py  el-GR.py  en-GB.py  en-NZ.py  en-US.py  es-ES.py  es-US.py  fr-BE.py  fr-FR.py  holidays.py  hr-HR.py  is-IS.py  it-IT.py  nb-NO.py  nl-BE.py  nl-NL.py  pt-PT.py  ru-RU.py  sk-SK.py
src/: .gitignore  CMakeLists.txt  holidata.cpp
src/holidata/: __init__.py  emitters.py  holiday.py  plugin.py  utils.py
src/holidata/holidays/: AT.py  BE.py  BR.py  CA.py  CH.py  CO.py  CZ.py  DE.py  DK.py  EE.py  ES.py  FI.py  FR.py  GB.py  GR.py  HR.py  HU.py  IN.py  IS.py  IT.py  NL.py  NO.py  NZ.py  PL.py  PT.py  RU.py  SE.py  SG.py  SI.py  SK.py  TR.py  US.py  ZA.py  __init__.py  cs-CZ.py  da-DK.py  de-AT.py  de-BE.py  de-CH.py  de-DE.py  (+31 more)
src/holidata/holidays/AT/: __init__.py
src/holidata/holidays/AU/: ACT.py  NSW.py  NT.py  QLD.py  SA.py  TAS.py  VIC.py  WA.py  __init__.py
src/holidata/holidays/BE/: __init__.py
src/holidata/holidays/BR/: __init__.py
src/holidata/holidays/CA/: __init__.py
src/holidata/holidays/CH/: __init__.py
src/holidata/holidays/CO/: __init__.py
src/holidata/holidays/CZ/: __init__.py
src/holidata/holidays/DE/: BB.py  BE.py  BW.py  BY.py  HB.py  HE.py  HH.py  MV.py  NI.py  NW.py  RP.py  SH.py  SL.py  SN.py  ST.py  TH.py  __init__.py
src/holidata/holidays/DK/: __init__.py
src/holidata/holidays/EE/: __init__.py
src/holidata/holidays/ES/: AN.py  AR.py  AS.py  CB.py  CE.py  CL.py  CM.py  CN.py  CT.py  EX.py  GA.py  IB.py  MC.py  MD.py  ML.py  NC.py  PV.py  RI.py  VC.py  __init__.py  es-ES.py
src/holidata/holidays/FI/: __init__.py
src/holidata/holidays/FR/: __init__.py
src/holidata/holidays/GB/: __init__.py
src/holidata/holidays/GR/: __init__.py
src/holidata/holidays/HK/: __init__.py
src/holidata/holidays/HR/: __init__.py
src/holidata/holidays/HU/: __init__.py
src/holidata/holidays/IN/: __init__.py
src/holidata/holidays/IS/: __init__.py
src/holidata/holidays/IT/: __init__.py
src/holidata/holidays/LU/: __init__.py
src/holidata/holidays/NL/: __init__.py
src/holidata/holidays/NO/: __init__.py
src/holidata/holidays/NZ/: __init__.py
src/holidata/holidays/PL/: __init__.py
src/holidata/holidays/PT/: __init__.py
src/holidata/holidays/RU/: __init__.py
src/holidata/holidays/SE/: __init__.py
src/holidata/holidays/SG/: __init__.py
src/holidata/holidays/SI/: __init__.py
src/holidata/holidays/SK/: __init__.py
src/holidata/holidays/TR/: __init__.py
src/holidata/holidays/US/: __init__.py
src/holidata/holidays/ZA/: __init__.py
test/: CMakeLists.txt  template.t  version.t
test/basetest/: __init__.py  holidata.py  utils.py
tests/: __init__.py  test_emitters.py  test_holidata.py  test_holidays.py  test_utils.py
tests/__snapshots__/test_holidata/: test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2011].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2012].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2013].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2014].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2015].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2016].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2017].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2018].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2019].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2020].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2021].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2022].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2023].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2024].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2025].json  test_holidata_produces_holidays_for_locale_and_year[cs-CZ-2026].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2011].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2012].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2013].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2014].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2015].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2016].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2017].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2018].json  test_holidata_produces_holidays_for_locale_and_year[da-DK-2019].json  (+653 more)
tests/snapshots/: snap_test_holidata.py
(+701 files in other folders)
